change module name when generating rtl

--- a/vitis/BUILD
+++ b/vitis/BUILD
@@ -19,3 +19,9 @@ cc_library(
     strip_include_prefix = "external/rules_hdl/",
     visibility = ["//visibility:public"],
 )
+
+py_binary(
+    name = "hls_generator",
+    srcs = ["hls_generator.py"],
+    visibility = ["//visibility:public"],
+)
